--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "@dcloudio/uni-stat": "^2.0.0-26920200424005",
     "core-js": "^3.6.4",
     "flyio": "^0.6.2",
+    "node-sass": "^4.14.0",
     "regenerator-runtime": "^0.12.1",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vuex": "^3.0.1"
   },
